Refs #143927 - Fix charts layout spacing issue.

--- a/src/less/wisemin.less
+++ b/src/less/wisemin.less
@@ -12,3 +12,14 @@ body.searchlib-page {
     }
   }
 }
+
+@media screen and (min-width: 770px) {
+  body.searchlib-page {
+    div.searchapp-wisemin {
+      div.charts-intro-page {
+        width: calc(100% + 25px);
+        transform: translateX(15px);
+      }
+    }
+  }
+}
